♻️(helm) refactor clusterSecretStore and ExternalSecret deployments
Refactored ClusterSecretStore and ExternalSecret deployment to support
VaultWarden custom fields beyond login/password, including multi-line
values via file input. Also made the secret template name configurable
for added flexibility.

ClusterSecretStore are supposed to be cluster-wide objects, it's useless
to precise any namespace.

--- a/src/helm/extra/templates/external_secret_deployment.yaml
+++ b/src/helm/extra/templates/external_secret_deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bitwarden-cli-visio
+  name: bitwarden-cli-{{ $.Release.Namespace }}
   namespace: {{ $.Release.Namespace | quote }}
   labels:
     app.kubernetes.io/instance: bitwarden-cli
@@ -29,17 +29,17 @@ spec:
             - name: BW_HOST
               valueFrom:
                 secretKeyRef:
-                  name: bitwarden-cli-visio
+                  name: bitwarden-cli-{{ $.Release.Namespace }}
                   key: BW_HOST
             - name: BW_USER
               valueFrom:
                 secretKeyRef:
-                  name: bitwarden-cli-visio
+                  name: bitwarden-cli-{{ $.Release.Namespace }}
                   key: BW_USERNAME
             - name: BW_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: bitwarden-cli-visio
+                  name: bitwarden-cli-{{ $.Release.Namespace }}
                   key: BW_PASSWORD
           ports:
             - name: http
@@ -74,7 +74,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: bitwarden-cli-visio
+  name: bitwarden-cli-{{ $.Release.Namespace }}
   namespace: {{ $.Release.Namespace | quote }}
   labels:
     app.kubernetes.io/instance: bitwarden-cli
