--- a/src/helm/meet/values.yaml
+++ b/src/helm/meet/values.yaml
@@ -120,8 +120,8 @@ backend:
     targetPort: 8000
     annotations: {}
 
- ## @param backend.migrate.command backend migrate command
- ## @param backend.migrate.restartPolicy backend migrate job restart policy
+  ## @param backend.migrate.command backend migrate command
+  ## @param backend.migrate.restartPolicy backend migrate job restart policy
   migrate:
     command:
       - "python"
@@ -130,8 +130,8 @@ backend:
       - "--no-input"
     restartPolicy: Never
 
- ## @param backend.createsuperuser.command backend migrate command
- ## @param backend.createsuperuser.restartPolicy backend migrate job restart policy
+  ## @param backend.createsuperuser.command backend migrate command
+  ## @param backend.createsuperuser.restartPolicy backend migrate job restart policy
   createsuperuser:
     command:
       - "/bin/sh"
@@ -184,6 +184,9 @@ backend:
   ## @param backend.extraVolumes Additional volumes to mount on the backend.
   extraVolumes: []
 
+  ## @param backend.pdb.enabled Enable pdb on backend
+  pdb:
+    enabled: true
 
 ## @section frontend
 
@@ -278,6 +281,10 @@ frontend:
 
   ## @param frontend.extraVolumes Additional volumes to mount on the frontend.
   extraVolumes: []
+
+  ## @param frontend.pdb.enabled Enable pdb on frontend
+  pdb:
+    enabled: true
 
 ## @section posthog
 
@@ -443,6 +450,9 @@ summary:
   ## @param summary.extraVolumes Additional volumes to mount on the summary.
   extraVolumes: []
 
+  ## @param summary.pdb.enabled Enable pdb on summary
+  pdb:
+    enabled: true
 
 ## @section celery
 
@@ -533,3 +543,6 @@ celery:
   ## @param celery.extraVolumes Additional volumes to mount on the celery.
   extraVolumes: []
 
+  ## @param celery.pdb.enabled Enable pdb on celery
+  pdb:
+    enabled: false
