--- a/.github/workflows/release-helm-chart.yaml
+++ b/.github/workflows/release-helm-chart.yaml
@@ -3,10 +3,8 @@ run-name: Release Chart
 
 on:
   push:
-    branches:
-      - 'main'
     paths:
-      - ./src/helm/meet/**
+      - src/helm/meet/**
 
 jobs:
   release:
