♻️(helm) fix helm chart for keycloak stack
Ingress stop working, so this commit fix it

--- a/src/helm/extra/templates/external_secret.yaml
+++ b/src/helm/extra/templates/external_secret.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.secrets }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -26,3 +27,4 @@ spec:
         key: {{ .itemId }}
         property: {{ .field }}
 {{- end }}
+{{ end }}
