--- a/src/helm/extra/templates/external_secret_deployment.yaml
+++ b/src/helm/extra/templates/external_secret_deployment.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.secrets }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -90,3 +91,4 @@ spec:
   selector:
     app.kubernetes.io/name: bitwarden-cli
     app.kubernetes.io/instance: bitwarden-cli
+{{ end }}
