--- a/src/helm/extra/templates/clustersecretstore.yaml
+++ b/src/helm/extra/templates/clustersecretstore.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.secrets }}
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
@@ -31,3 +32,4 @@ spec:
     webhook:
       url: "http://bitwarden-cli-{{ $.Release.Namespace }}.{{ $.Release.Namespace }}.svc.cluster.local:8087/object/attachment/{{`{{ .remoteRef.property }}`}}?itemid={{`{{ .remoteRef.key }}`}}"
       result: {}
+{{ end }}
